--- a/platform/Dockerfile
+++ b/platform/Dockerfile
@@ -4,6 +4,15 @@ FROM python:3.8-slim
 # Set the working directory in the container
 WORKDIR /usr/src/app
 
+# Install system dependencies required for uWSGI
+RUN apt-get update && apt-get install -y \
+    build-essential \
+    python3-dev \
+    gcc \
+    libpcre3 \
+    libpcre3-dev \
+    && rm -rf /var/lib/apt/lists/*
+
 # Copy the requirements.txt file into the container at /usr/src/app
 COPY ./backend/requirements.txt ./
 
@@ -11,10 +20,11 @@ COPY ./backend/requirements.txt ./
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy the current directory contents into the container at /usr/src/app
-COPY ../backend/app /usr/src/app
+COPY ./backend/app ./
+COPY ./backend/uwsgi.ini ./
 
 # Make port 5000 available to the world outside this container
 EXPOSE 5000
 
-# Run app.py when the container launches
-CMD ["python", "./app.py"]
+# Run the app with uWSGI
+CMD ["uwsgi", "--ini", "uwsgi.ini"]
