--- a/platform/Dockerfile
+++ b/platform/Dockerfile
@@ -4,6 +4,8 @@ FROM python:3.8-slim
 # Set the working directory in the container
 WORKDIR /usr/src/app
 
+
+
 # Install system dependencies required for uWSGI
 RUN apt-get update && apt-get install -y \
     build-essential \
@@ -18,6 +20,9 @@ COPY ./backend/requirements.txt ./
 
 # Install any needed packages specified in requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
+
+COPY backend/qlab /usr/src/qlab
+RUN pip install --no-cache-dir /usr/src/qlab
 
 # Copy the current directory contents into the container at /usr/src/app
 COPY ./backend/app ./
