--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,2 +1,13 @@
 venv/
 app/secret.json
+
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+
+# C extensions
+*.so
+
+# Distribution / packaging
+*.egg-info/
+*.egg
